--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,18 @@ mybatis.config-location=classpath:mybatis-config.xml
 # ############################################# mybatis 配置文件 #######################################
 
 
+
+# ############################################# pagehelper 配置 #######################################
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
+# ############################################# pagehelper 配置 #######################################
+
+
+
+# #############################################    log4j2  配置 #######################################
+logging.config= classpath:log4j2.xml
+# #############################################    log4j2  配置 #######################################
 
 server.port=8080
