AOP拦截所有请求

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 			<version>2.8.0</version>
 		</dependency>
 
+		<!-- AOP -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
 		<!--Test-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
