--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ############################################# MySQL 配置 ############################################
-spring.datasource.url=jdbc:mysql://101.200.238.155:2333/ad?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://101.200.238.155:2333/efan?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=NEUsoft@1
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
