--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,13 @@ pagehelper.params=count=countSql
 
 # #############################################    log4j2  配置 #######################################
 logging.config= classpath:log4j2.xml
+
+#log4j.logger.org.apache.ibatis=debug
+#log4j.logger.Java.sql.PreparedStatement=DEBUG
+#log4j.logger.java.sql.Statement=DEBUG
+#log4j.logger.java.sql.Connection=DEBUG
+#log4j.logger.java.sql.ResultSet=DEBUG
+
 # #############################################    log4j2  配置 #######################################
 
 server.port=8080
