--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,14 @@
 			<version>7.2.6</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.jeecg/easypoi-base -->
+		<dependency>
+			<groupId>org.jeecg</groupId>
+			<artifactId>easypoi-base</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
+
 		<!--Test-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
