--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,19 @@
-# ############################################# MySQL 配置 ############################################
 spring.datasource.url=jdbc:mysql://101.200.238.155:2333/efan?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=NEUsoft@1
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-# ############################################# MySQL 配置 ############################################
 
-
-
-# ############################################# mybatis 配置文件 #######################################
 mybatis.config-location=classpath:mybatis-config.xml
-# ############################################# mybatis 配置文件 #######################################
 
-
-
-# ############################################# pagehelper 配置 #######################################
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
-# ############################################# pagehelper 配置 #######################################
 
-
-
-# #############################################    log4j2  配置 #######################################
 logging.config= classpath:log4j2.xml
 
-#log4j.logger.org.apache.ibatis=debug
-#log4j.logger.Java.sql.PreparedStatement=DEBUG
-#log4j.logger.java.sql.Statement=DEBUG
-#log4j.logger.java.sql.Connection=DEBUG
-#log4j.logger.java.sql.ResultSet=DEBUG
-
-# #############################################    log4j2  配置 #######################################
-
 server.port=8080
+
+###########################自定义属性#############################
+efan.wxsmAccount=wx000001
+efan.alismAccount=ali000001
