--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,10 @@ logging.config= classpath:log4j2.xml
 server.port=8080
 
 ###########################自定义属性#############################
+#收款账号
 efan.wxsmAccount=wx000001
 efan.alismAccount=ali000001
+#微信api
+efan.wxAppid=wx1111111111111
+efan.wxMchid=1111111111
+efan.wxSecret=abcdefg
